[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "wirefuzz"
version = "0.1.0"
description = "Wireshark protocol dissector fuzzing tool using libfuzzer"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "rich>=12.0",
    "requests>=2.28",
    "InquirerPy>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[tool.setuptools.packages.find]
include = ["wirefuzz*"]

[project.scripts]
wirefuzz = "wirefuzz.cli:main"
